<resources>
    <string name="app_name">Movien</string>
    
    <!--LOGIN-->
    <string name="login_login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_field_is_empty">Field cannot be empty</string>
    <string name="login_invalid_credentials">Invalid username or password</string>
    <string name="login_have_account">Don\'t have an account yet?</string>
    <string name="login_sign_up">Sign Up</string>
    <!--MOVIE DETAILS-->
    <string name="movie_details_overview">Overview</string>
    <string name="movie_details_rating">Rating</string>
    <string name="movie_details_rating_holder">%1s by %2d raters.</string>
    <string name="movie_details_release_date">Release date</string>
    <string name="movie_details_genres">Genres</string>
    <string name="movie_details_budget">Budget</string>
    <string name="movie_details_status">Status</string>
    <string name="movie_details_reviews">Reviews</string>
    <!--PROFILE-->
    <string name="profile_id">ID</string>
    <string name="profile_username">Username</string>
    <string name="profile_name">Name</string>
    <string name="profile_logout">Logout</string>
    <!--REVIEWS-->
    <string name="fragment_reviews_reviews">Reviews</string>
    <string name="fragment_reviews_show_more">SHOW MORE</string>
    <string name="fragment_reviews_show_less">SHOW LESS</string>
    <string name="fragment_reviews_empty">No reviews yet</string>
</resources>
